@@ -1279,6 +1279,29 @@
             </locale>
         </schema>
 
+        <schema>
+            <key>/schemas/desktop/gnome/thumbnailers/application@x-extension-webm/enable</key>
+            <applyto>/desktop/gnome/thumbnailers/application@x-extension-webm/enable</applyto>
+            <owner>nailer</owner>
+            <type>bool</type>
+            <default>true</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
+
+        <schema>
+            <key>/schemas/desktop/gnome/thumbnailers/application@x-extension-webm/command</key>
+            <applyto>/desktop/gnome/thumbnailers/application@x-extension-webm/command</applyto>
+            <owner>nailer</owner>
+            <type>string</type>
+            <default>/usr/bin/nailer %i %o %s</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
 
     </schemalist>
 </gconfschemafile>
