@@ -1,4 +1,5 @@
 Development
+    Make nailer work with webm files
     Make nailer work when idle=yes is in .mplayer/config
     Fix invalid gconf keys
     Switch from tempnam to gmp_tempname
